--- a/templates/base.html
+++ b/templates/base.html
@@ -12,8 +12,8 @@
     <!-- Custom CSS -->
     <style>
         :root {
-            --primary-color: #ff4500;
-            --secondary-color: #ff6347;
+            --primary-color: rgb(66, 123, 23);
+            --secondary-color: #5fff47;
             --accent-color: #ffdab9;
             --text-color: #ff4500;
             --background-color: #ffefd5;
@@ -168,7 +168,7 @@
         }
         
         .online-badge {
-            background-color: #198754;
+            background-color: #39fa46;
             color: white;
             padding: 3px 8px;
             border-radius: 4px;
@@ -237,7 +237,7 @@
     <!-- Sidebar -->
     <div class="sidebar" id="sidebar">
         <div class="logo">
-            <img src="{{ url_for('static', filename='Screenshot 2025-03-01 151902.png') }}" alt="BUILDBTECH" style="max-width: 100%; max-height: 60px;">
+            <img src="{{ url_for('static', filename='Screenshot 2025-03-01 151902.png') }}" alt="BUILDBTECH" style="max-width: 100%; max-height: 100px;">
         </div>
         <ul class="nav flex-column">
             <li>
