--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,7 +1,7 @@
 /* Main stylesheet for BUILDBTECH */
 :root {
-    --primary-color: #ff4500;
-    --secondary-color: #ff6347;
+    --primary-color: rgb(66, 123, 23);
+    --secondary-color: #6fff47;
     --accent-color: #ffdab9;
     --text-color: #ff4500;
     --background-color: #ffefd5;
