--- a/templates/features/lab_reports.html
+++ b/templates/features/lab_reports.html
@@ -96,7 +96,7 @@
     }
 
     .feature-card {
-        background-color: #ffdab9;
+        background-color: #45ee45;
         padding: 20px;
         border-radius: 10px;
         text-align: center;
@@ -131,7 +131,7 @@
     }
 
     th {
-        background-color: #ffdab9;
+        background-color: #32f960;
         color: #ff4500;
     }
 
@@ -147,8 +147,8 @@
     }
 
     .status-badge.completed {
-        background-color: #98fb98;
-        color: #006400;
+        background-color: #46f346;
+        color: #d68869;
     }
 
     .btn-action {
