--- a/templates/license.html
+++ b/templates/license.html
@@ -9,8 +9,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         :root {
-            --primary-color: #ff4500;
-            --secondary-color: #ff6347;
+            --primary-color: rgb(66, 123, 23);
+            --secondary-color: #7bff47;
             --accent-color: #ffdab9;
             --text-color: #ff4500;
             --background-color: #ffefd5;
