--- a/templates/login.html
+++ b/templates/login.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
         :root {
-            --primary-color: #ff4500;
-            --secondary-color: #ff6347;
+            --primary-color: rgb(66, 123, 23);
+            --secondary-color: #47ff4d;
             --accent-color: #ffdab9;
             --text-color: #ff4500;
             --background-color: #ffefd5;
@@ -109,7 +109,7 @@
             text-align: center;
             margin-top: 20px;
             font-size: 14px;
-            color: #6c757d;
+            color: rgba(0,0,0,0.4);
         }
 
         .features-list {
