--- a/templates/register.html
+++ b/templates/register.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
         :root {
-            --primary-color: #ff4500;
-            --secondary-color: #ff6347;
+            --primary-color: rgb(66, 123, 23);
+            --secondary-color: #47ff50;
             --accent-color: #ffdab9;
             --text-color: #ff4500;
             --background-color: #ffefd5;
@@ -208,7 +208,7 @@
                     </select>
                 </div>
                 <div class="mb-3">
-                    <p>By registering, you agree to our <a href="/license" target="_blank">License Agreement</a></p>
+                    <p>By registering, you agree to our <a href="/LICENSE.md" target="_blank">License Agreement</a></p>
                 </div>
                 <div class="d-grid gap-2">
                     <button type="submit" class="btn btn-primary">Register</button>
