--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,7 +3,7 @@
     --primary-color: rgb(66, 123, 23);
     --secondary-color: #6fff47;
     --accent-color: #ffdab9;
-    --text-color: #ff4500;
+    --text-color: rgb(66, 123, 23);
     --background-color: #ffefd5;
 }
 
