--- a/templates/features/lab_reports.html
+++ b/templates/features/lab_reports.html
@@ -105,12 +105,12 @@
 
     .feature-card i {
         font-size: 2em;
-        color: #ff4500;
+        color: rgb(66, 123, 23);
         margin-bottom: 10px;
     }
 
     .feature-card h3 {
-        color: #ff4500;
+        color: rgb(66, 123, 23);
         margin-bottom: 10px;
     }
 
@@ -132,7 +132,7 @@
 
     th {
         background-color: #32f960;
-        color: #ff4500;
+        color: rgb(66, 123, 23);
     }
 
     .status-badge {
@@ -155,7 +155,7 @@
         padding: 5px 10px;
         margin: 0 2px;
         border-radius: 5px;
-        color: #ff4500;
+        color: rgb(66, 123, 23);
         background: none;
         border: none;
         cursor: pointer;
@@ -172,12 +172,12 @@
 
     .empty-state i {
         font-size: 4em;
-        color: #ff4500;
+        color: rgb(66, 123, 23);
         margin-bottom: 20px;
     }
 
     .empty-state p {
-        color: #ff6347;
+        color: rgb(66, 123, 23);
         margin-bottom: 20px;
     }
 </style>
